fixed overflow of list items to the bottom of the window

--- a/src/css/todo.css
+++ b/src/css/todo.css
@@ -3,7 +3,7 @@
   top: 48px;
   left: 0;
   right: 0;
-  padding: 0 24px;
+  padding: 0 24px 120px;
 }
 
 /* List Title */
@@ -325,6 +325,7 @@
     width: 100%;
     max-width: 540px;
     margin: 0 auto;
+    padding: 0 24px 60px;
   }
 
   /* List Title */
