--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ body {
   max-width: 1440px;
   margin: 0 auto;
   position: relative;
+  overflow-x: hidden;
 }
 
 .bgNight {
